# hidrm

./: .gitignore  Makefile.am  configure.ac  meson.build
intel/: Makefile.am  Makefile.sources  intel_bufmgr.h  intel_bufmgr_gem.c  meson.build
minigui/: Makefile.am  Makefile.sources  drivers.c  drivers.h  intel-batchbuffer.h  intel-context.h  intel-i915-driver.c  intel-reg.h  libdrm_minigui.pc.in  meson.build
tests/kms/: libkms-test-screen.c
